@@ -43,6 +43,8 @@ Changes in administration of the server
     * jabberd14 automatically generates the list of supported features for
       a reply to a service discovery request. There is no need anymore to
       configure a disco result in the configuration file.
+    * After an account has been deleted by the user, the JabberID is blocked
+      against reregistrations for half a year.
 
 Changes in features visible to the user
     * Support for Flexible Offline Message Retrieval (XEP-0013)
